<resources>
    <string name="app_name">BowCakeUserHistory</string>
    <string name="member_detail_view_title_name">Name</string>
    <string name="member_detail_view_title_address">Address</string>
    <string name="member_detail_view_title_tel">Tel.</string>
    <string name="string_text_firstname">FirstName</string>
    <string name="string_text_lastname">LastName</string>
    <string name="string_text_address">Address</string>
    <string name="string_text_tel">Tel.</string>
    <string name="string_text_edit_picture">Edit Picture</string>
    <string name="string_text_company">Company</string>
    <string name="string_text_email">E-mail</string>
    <string name="string_text_save">Save</string>
</resources>
