<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/default_margin_padding_normal">

    <ImageView
        android:id="@+id/member_detail_view_iv_member_image"
        android:layout_width="@dimen/member_detail_width_image"
        android:layout_height="@dimen/member_detail_height_image"
        android:padding="@dimen/default_margin_padding_small"
        android:src="@drawable/ic_member_default"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/default_margin_padding_large"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_detail_view_title_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_padding_normal"
            android:text="@string/member_detail_view_title_address" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_padding_normal"
            android:text="@string/member_detail_view_title_tel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/default_margin_padding_normal"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/member_detail_view_tv_member_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/member_detail_view_tv_member_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_padding_normal" />

        <TextView
            android:id="@+id/member_detail_view_tv_member_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_padding_normal" />
    </LinearLayout>
</LinearLayout>